# MCPnp

./: .pylintrc  CLAUDE.md  INSTALL.md  MANIFEST.in  README.md  REFLECTIONS.md  build.py  check.py  example_server.py  mcp_router_example.py  mcp_tool_router.py  pyproject.toml  run_mcp.py  test_server.py
.github/workflows/: python-package.yml
mcpnp/: __init__.py  cli.py
mcpnp/auth/: __init__.py  datastore.py  datastore_postgresql.py  datastore_sqlite.py  oauth_handlers.py  oauth_server.py  user_manager.py
mcpnp/server/: __init__.py  context.py  unified_server.py
mcpnp/templates/: __init__.py  oauth_templates.py
mcpnp/tools/: __init__.py  base.py
templates/: oauth_templates.py
tests/: conftest.py  test_example_server.py  test_mcp_e2e.py  test_mcp_server_startup.py  test_mcp_transport_modes.py  test_oauth_redirect_uri_matching.py  test_tool_decorators.py  test_tool_integration.py
